fixed overflow and some pp for intro

--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -1,4 +1,6 @@
 .intro {
+  min-width: 100%;
+  max-width: 100%;
   background-color: $color-black-perl;
   background-image: image-set(
     url("../img/bg-intro.webp") 1x,
@@ -10,7 +12,10 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  margin-top: -35px;
+
+  @include vp-1023 {
+    margin-top: -3%;
+  }
 
   @include vp-767 {
     background-position: center, -220px;
@@ -21,31 +26,31 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  min-height: 35vw;
-  max-height: 47.4vw;
-  width: 90vw;
-  max-width: 100vw;
-  overflow: hidden;
-  padding: 17.7vw 6.3vw 15vw 20vw;
+  max-width: 90%;
+  margin: 0 auto;
+  padding-left: 19.7%;
+  padding-bottom: 14.6%;
+  padding-top: 16%;
 
   @include vp-1023 {
-    min-height: 715px;
-    max-height: 640px;
-    padding: 16.1vw 8vw 13vw 3.7vw;
+    padding-top: 12%;
+    padding-bottom: 26.7%;
+    padding-left: 1.6%;
   }
 
   @include vp-767 {
-    min-height: 570px;
-    padding: 30.8vw 9.3vw 14vw 9.3vw;
-    margin: 0;
-    margin-bottom: -30px;
+    padding-top: 25.8%;
+    padding-bottom: 58.8%;
+    padding-left: 3.3%;
   }
 }
 
 .intro h2 {
   display: block;
+  max-width: 100%;
+  word-wrap: break-word;
   margin: 0;
-  margin-bottom: 28px;
+  margin-bottom: 23px;
   font-family: $ff-roboto;
   font-size: 4.1vw;
   font-style: normal;
@@ -56,50 +61,51 @@
   color: $color-alice-blue;
 
   @include vp-1023 {
-    margin: -0.2vw 0 16px -1.3vw;
-    font-size: 64px;
-    letter-spacing: 4.48px;
+    font-size: 8vw;
+    margin-bottom: 4.8px;
+    letter-spacing: 6.2px;
   }
 
   @include vp-767 {
-    width: 50vw;
-    margin: 0;
-    font-size: 10vw;
-    letter-spacing: 2.52px;
+    // width: 50vw;
+    // margin: 0;
+    margin-bottom: 14px;
+    font-size: 11.1vw;
+    letter-spacing: 2.92px;
   }
 }
 
 .intro p {
+  display: block;
+  max-width: 100%;
+  word-wrap: break-word;
   margin: 0;
   padding: 0;
-  margin-bottom: 2.3vw;
+  margin-bottom: 3.2%;
   font-family: $ff-ptmono;
   font-size: 1.14vw;
   font-weight: 400;
-  line-height: 34.1px; /* 34.1px */
+  line-height: 32.1px; /* 34.1px */
   color: $color-alice-blue;
-  max-width: 35vw;
 
   @include vp-1023 {
-    max-width: 90vw;
-    margin-left: -1vw;
-    margin-bottom: 7.5vw;
     font-size: 24px;
-    letter-spacing: 1.3px;
-    line-height: 37.7px;
+    letter-spacing: 2px;
+    line-height: 40.7px;
+    margin-bottom: 8.8%;
   }
 
   @include vp-767 {
-    min-width: 80vw;
-    margin: 2vw 0 50px 0;
-    font-size: 14px;
-    line-height: 21.7px;
+    font-size: 21px;
+    line-height: 39.7px;
+    letter-spacing: 2.4px;
+    margin-bottom: 17%;
   }
 }
 
 .intro__button {
-  min-width: 360px;
-  padding: 15px 25px;
+  max-width: 100%;
+  padding: 14px 25px;
   text-align: center;
   font-size: 0.9vw;
   letter-spacing: 0.9px;
@@ -110,19 +116,22 @@
 
   @include vp-1023 {
     font-size: 22px;
-    min-width: 51.59vw;
-    padding: 2.3vw 0;
-    margin-left: 4.5vw;
+    margin-left: 6.8%;
+    padding: 20px 32px;
+    letter-spacing: 1.2px;
   }
 
   @include vp-767 {
-    min-width: 80vw;
+    min-width: 100%;
     margin-left: 0;
+    padding: 30px auto;
   }
 }
 
 .intro__button-description {
-  display: inline;
+  display: block;
+  word-wrap: break-word;
+
 
   @include vp-767 {
     display: none;
@@ -133,7 +142,8 @@
 
     @include vp-767 {
       display: inline;
-      font-size: 16px;
+      font-size: 25px;
+      letter-spacing: 1.2px;
     }
   }
 }
